--- a/demo.html
+++ b/demo.html
@@ -115,8 +115,7 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="index.html"><img src="http://ietechennai.in/assets/img/logo.png
-            " alt="" class="img-fluid" width="50px" height="50px"></a>
+        <a class="navbar-brand" href="index.html"><img src="logo.png" alt="" class="img-fluid" width="50px" height="50px"></a>
       
         <!-- Links -->
         <ul class="navbar-nav">
